memo/memo-with-references/tests/4-fn-parameter-not-found.stderr
error: fn parameter named nonexistent not found
 --> tests/4-fn-parameter-not-found.rs:3:8
  |
3 | #[memo(nonexistent)]
  |        ^^^^^^^^^^^
