memo/memo-with-references/tests/4-fn-parameter-not-found.rs
use memo_with_references::memo;

#[memo(nonexistent)]
fn memome(cache: &'a str) {}

fn main() {}
